<resources>
    <string name="app_name">Devmo_android</string>
    <string name="the_images_of_a_place">the images of a place</string>
    <string name="name_of_the_place">name of the place</string>
    <string name="ranking">ranking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="the_image_recommendation">the_image_recommendation</string>
    <string name="image_main">image_main</string>
    <string name="search">search</string>

    <string name="adress1">4 Place Marc Elder, 44000 Nantes</string>
    <string name="adress2">Boulevard Léon Bureau, 44200 Nantes</string>
    <string name="imageplace1">imageplace1</string>
    <string name="imageplace2">imageplace2</string>
    <string name="des2">Les Machines de l’île sont situées à la croisée des « mondes inventés » de Jules Verne, de l’univers mécanique de Léonard de Vinci et de l’histoire industrielle de Nantes.</string>
    <string name="des1">Un château riche de six siècles d’histoire, qui abrite un palais résidentiel aux façades raffinées avec ses loggias d’esprit Renaissance.</string>
    <string name="name1">Château des ducs de Bretagne</string>
    <string name="name2">Les Machines de l’île</string>
    <string name="button_favorite">button favorite</string>
    <string name="desc_detail1">Il a été construit à la fin du 15e siècle par François II, dernier duc de Bretagne, puis par sa fille, Anne de Bretagne, deux fois reine de France.
    Un château riche de six siècles d’histoire, qui abrite un palais résidentiel aux façades raffinées avec ses loggias d’esprit Renaissance. De récentes découvertes archéologiques, historiques et architecturales permettent d’aborder différemment l’histoire de ce monument.
    Au cœur du quartier médiéval de Nantes, sa cour, ses remparts et ses douves sont accessibles.  Place publique, il vous accueille pour un moment de détente ou lors de grands événements culturels.</string>

    <string name="please_write_a_comment">please write a comment</string>
    <string name="send">SEND</string>
    <string name="desc_detail2" >Les Machines de l’île sont un espace d’exposition et d’animation situé à Nantes, en France. Créé par François Delarozière et Pierre Orefice, il se trouve sur l’Île de Nantes, dans le parc des Chantiers, à l’emplacement d’anciens chantiers navals désaffectés.Les Machines de l’île sont situées à la croisée des « mondes inventés » de Jules Verne, de l’univers mécanique de Léonard de Vinci et de l’histoire industrielle de Nantes. En octobre 2007, à Paris, le Salon international du tourisme lui a décerné son prix spécial du jury, qui récompense un équipement touristique innovant2. Il s’agit de l’une des attractions touristiques d’Europe à avoir été distingué par un Thea Award, décerné par la Themed Entertainment Association
</string>
</resources>